[tool.poetry]
name = "kmicms"
version = "0.1.0"
description = ""
authors = ["Dan Trickey <git@trickey.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wagtail = "^5.2.2"  # LTS
django = "^4.2"  # LTS

# Django Apps
django-compressor = "^4.4"
django-crispy-forms = "^2.1"
django-libsass = "^0.9"
crispy-bootstrap5 = "^2023.10"

# Wagtail Apps
wagtailcodeblock = "^1.29.0.1"

# Other Dependencies
authlib = "^1.3.0"
django-recaptcha = "^4.0.0"
pydantic = "^2.5.3"
requests = "^2.31.0"

# Deployment
gunicorn = "^21.2.0"
psycopg = {extras = ["binary", "pool"], version = "^3.1.16"}
redis = "^5.0.1"
setuptools = "^69.0.3"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.2.0"
djhtml = "^3.0.6"
ruff = "^0.1.9"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-django = "^4.7.0"
responses = "^0.24.1"

[tool.ruff]
target-version = "py310"
line-length = 120

select = [
    "A",
    "ANN",
    "B",
    "BLE",
    "C4",
    "COM",
    "DJ",
    "DTZ",
    "E",
    "F",
    "FA",
    "FBT",
    "I",
    "N",
    "S",
    "T10",
    "UP",
    "W",
]
ignore = [
    "ANN101",  # Missing type annotation for `self` in method
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "B009",    # Do not call `getattr` with a constant attribute value.
    "COM812",  # Conflicts with formatter
    "N999",    # Invalid module name
    "S101",    # S101 Use of `assert` detected
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
